@@ -1,8 +1,18 @@
 package me.emafire003.dev.lightwithin.commands;
 
+import com.mojang.brigadier.suggestion.SuggestionProvider;
 import com.mojang.brigadier.tree.LiteralCommandNode;
+import me.emafire003.dev.lightwithin.LightWithin;
+import me.emafire003.dev.lightwithin.lights.InnerLightType;
+import me.emafire003.dev.lightwithin.util.TargetType;
 import net.fabricmc.loader.api.FabricLoader;
+import net.minecraft.command.argument.EntityArgumentType;
 import net.minecraft.server.command.ServerCommandSource;
+import net.minecraft.server.network.ServerPlayerEntity;
+import net.minecraft.text.Text;
+
+import java.util.Collection;
+import java.util.List;
 
 
 //Based on Factions' code https://github.com/ickerio/factions
@@ -10,85 +20,11 @@ public interface LightCommand {
     public LiteralCommandNode<ServerCommandSource> getNode();
     public static final boolean permissions = FabricLoader.getInstance().isModLoaded("fabric-permissions-api-v0");
 
-    /*public interface Requires {
-        boolean run(User user);
-
-        @SafeVarargs
-        public static Predicate<ServerCommandSource> multiple(Predicate<ServerCommandSource>... args) {
-            return source -> {
-                for (Predicate<ServerCommandSource> predicate : args) {
-                    if (!predicate.test(source)) return false;
-                }
-
-                return true;
-            };
-        }
-
-        public static Predicate<ServerCommandSource> isFactionless() {
-            return require(user -> !user.isInFaction());
-        }
-
-        public static Predicate<ServerCommandSource> isMember() {
-            return require(user -> user.isInFaction());
-        }
-
-        public static Predicate<ServerCommandSource> isCommander() {
-            return require(user -> user.rank == User.Rank.COMMANDER || user.rank == User.Rank.LEADER || user.rank == User.Rank.OWNER);
-        }
-
-        public static Predicate<ServerCommandSource> isLeader() {
-            return require(user -> user.rank == User.Rank.LEADER || user.rank == User.Rank.OWNER);
-        }
-
-        public static Predicate<ServerCommandSource> isOwner() {
-            return require(user -> user.rank == User.Rank.OWNER);
-        }
-
-        public static Predicate<ServerCommandSource> isAdmin() {
-            return source -> source.hasPermissionLevel(FactionsMod.CONFIG.REQUIRED_BYPASS_LEVEL);
-        }
-
-        public static Predicate<ServerCommandSource> hasPerms(String permission, int defaultValue) {
-            return source -> !permissions || Permissions.check(source, permission, defaultValue);
-        }
-
-        public static Predicate<ServerCommandSource> require(Requires req) {
-            return source -> {
-                ServerPlayerEntity entity = source.getPlayer();
-                User user = Command.getUser(entity);
-                return req.run(user);
-            };
-        }
-    }
 
     public interface Suggests {
-        String[] run(User user);
 
-        public static SuggestionProvider<ServerCommandSource> allFactions() {
-            return allFactions(true);
-        }
 
-        public static SuggestionProvider<ServerCommandSource> allFactions(boolean includeYou) {
-            return suggest(user ->
-                    Faction.all()
-                            .stream()
-                            .filter(f -> includeYou || !user.isInFaction() || !user.getFaction().getID().equals(f.getID()))
-                            .map(f -> f.getName())
-                            .toArray(String[]::new)
-            );
-        }
-
-        public static SuggestionProvider<ServerCommandSource> openFactions() {
-            return suggest(user ->
-                    Faction.all()
-                            .stream()
-                            .filter(f -> f.isOpen())
-                            .map(f -> f.getName())
-                            .toArray(String[]::new)
-            );
-        }
-
-        public static SuggestionProvider<ServerCommandSource> openInvitedFactions() {
+        /*public static SuggestionProvider<ServerCommandSource> openInvitedFactions() {
             return suggest(user ->
                     Faction.all()
                             .stream()
@@ -107,14 +43,38 @@ public interface LightCommand {
                 }
                 return builder.buildFuture();
             };
+        }*/
+
+        static SuggestionProvider<ServerCommandSource> targetTypes() {
+            return (context, builder) -> {
+
+                Collection<ServerPlayerEntity> targets = EntityArgumentType.getPlayers(context, "player");
+                for(ServerPlayerEntity player : targets){
+                    InnerLightType light = LightWithin.LIGHT_COMPONENT.get(player).getType();
+                    List<TargetType> possible = LightWithin.possible_targets.get(light);
+
+                    for(TargetType type : possible){
+                        builder.suggest(type.toString());
+                    }
+                }
+
+
+                return builder.buildFuture();
+            };
+        }
+
+        static SuggestionProvider<ServerCommandSource> allLightTypes() {
+            return (context, builder) -> {
+                for(InnerLightType type : InnerLightType.values()){
+                    if(type.equals(InnerLightType.NONE)){
+                        continue;
+                    }
+                    builder.suggest(type.toString());
+                }
+
+                return builder.buildFuture();
+            };
         }
     }
 
-    public static User getUser(ServerPlayerEntity player) {
-        User user = User.get(player.getUuid());
-        if (user.getSpoof() == null) {
-            return user;
-        }
-        return user.getSpoof();
-    }*/
 }
