@@ -4,13 +4,13 @@ public enum InnerLightType {
     HEAL,
     STRENGTH,
     DEFENCE,
-    PITCH_BLACK, //maybe there could be only one of a kind of these two per server/world and if they don't log in for some time a new one can be chosen
+    /*PITCH_BLACK, //maybe there could be only one of a kind of these two per server/world and if they don't log in for some time a new one can be chosen
     PURE_WHITE,
     LEECH,//could be degeneration of both of the two legendary lights up here ^
     SHOCKWAVE,
 
     FROST_FIRE, //could be a special SELF eheh one
-
+    */
     //This could have a sort of stun effect where the player is kinda dizzy and the STUN effect which is not bucket removable and blocks the player from moving for a while, with a low chance of fumbling the weapon
     //elementals down below
 
@@ -32,24 +32,26 @@ public enum InnerLightType {
     //simply blow away the enemies and give speed and slow falling to self? The "ALLIES" could be like  buff both self and allies? With high speed and jump boost and stuff
     AQUA, //needs something watery (bottle/bucket) in hand or water around
     //this is going to be quite complex
-	
+
+    /*
 	VELOX, //Like maybe it triggers only for self and allies, and speeds away like superfast
 	VENOMOUS, //poisons everything around/only enemies, nullifies poison effect for self maybe spawing an area of effect? And other things like these
 	
     CONCEAL,
     SPEED,
-    SLOW,
-    THUNDER_AURA,
+    SLOW,*/
+
+    //TODO next up aura lights
+    /*THUNDER_AURA,
     FOREST_AURA, //spawn vines to block people, poisons enemies and such
-    ENDER_AURA,
-    PROJECTILE,
+    ENDER_AURA,*/
+
+    /*PROJECTILE,
     SPIDER_SENSE,//scale up walls?
     SCATTER, //Maybe explodes taking some of the player's hp and scattering projectiles?
     JUMPY, //Check if there are blocks too high and the player needs. I dunno. Something? Maybe only when in combat?
     FIREFLIES_MASTER, //Welp, not coming with 1.19 sooooo. It's gonna shoot out firefiles that attack or explode integrations with the Fireflally mod xD
-    GENERIC,
+    GENERIC,*/
     FROG, //What's it doing here?
     NONE
 }
-//TODO for the elemental ones spawn block structures under the player's feet. Maybe they could have two stages targets, like one where they attack and one where they defend. FOr example, summoning a wall of thin ice to protect an ally from direct hit. Like some kinda ice which has low durability and shatters easly and melts afeter a few seconds. This could be done for the other elements as well.
-
